# Little-CMS

./: .gitignore  CMakeLists.txt
src/: cmslut.cc  cmsxform.cc  lcms2_internal.h
